# NMS-Mod-Manager

./: .gitignore  README.md  index.html  mod_warnings.json  package-lock.json  package.json  vite.config.js
.github/scripts/: generate_curated_list.cjs  generate_curated_list.js
.github/workflows/: update_curated_list.yml
curated/: curated_list.json
exceptions/: exceptions_list.json
modsdatabase/: mod_database.json
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/locales/: cn.json  cs.json  de.json  en.json  es.json  fr.json  kr.json  pl.json  pt.json  ru.json  sv.json  uk.json
src-tauri/src/: main.rs
