[package]
name = "nms-mod-manager"
version = "1.0.0"
description = "A No Man's Sky Mod Manager"
authors = ["Syzzle"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "shell-open", "window-all", "dialog-all", "fs-all", "path-all" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.52"
open = "5.0"
zip = "5.1.1"
unrar = "0.5.8"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true 
lto = true  
